
2015-03-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c : added more checks of overlapping MOVE,
	  generate MOVEs as overlapping if it's not sure it isn't

2015-03-05  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c : added check of recursive CALL for INITIAL programs

2015-01-31  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c : updated valid_time_format and valid_datetime_format to pass
	  decimal points

2015-01-06  Brian Tiffin <btiffin@users.sf.net>

	* cobc/parser.y : fixed segfault with STOP "literal" with the
	  ACCEPT OMITTED feature of waiting for a return attempting
	  to generate code with a null pointer

2014-12-02  Sergey Kashyrin <ska@kiska.net>

	* codegen.c : fix for bug #52 incorrect premature memory release (CANCEL) of INITIAL programs

2014-12-01  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y : fix bug #108 figurative constants not accepted in screen items

2014-11-18  Sergey Kashyrin <ska@kiska.net>

	* field.c : fix bug #89 incorrect LENGTH OF redefined

2014-11-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (decimal_expand): fix bug #106 allocating cob_decimal too often

2014-10-29  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* config.c (cb_config_entry): remove inline comments from entry
	* config.def, scanner.l : check maximum word length depending on new
	  configuration word-length
	* cobc.c : added std=acu

2014-10-17  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y : added SUPPRESS clause as PENDING, see request #23

2014-09-18  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* pplex.l : bug #96 prevent line overflow, add warning "Source text too long"
	* pplex.l : only show warning "Source text after column ..." if no comment was
	  started in this line before
	  
2014-09-17  Edward Hart <edward.dan.hart@gmail.com>
