@@ -276,7 +276,7 @@ static size_t		verbose_output = 0;
 static size_t		cob_optimize = 0;
 
 #ifdef	_MSC_VER
-#if	_MSC_VER >= 1400
+#if	COB_USE_VC2005_OR_GREATER
 static const char	*manicmd;
 #endif
 static const char	*manilink;
@@ -3548,7 +3548,7 @@ process_module_direct (struct filename *fn)
 			fn->translate,
 			manilink, cobc_ldflags, cobc_libs, cobc_lib_paths);
 	ret = process (cobc_buffer, fn);
-#if	_MSC_VER >= 1400
+#if	COB_USE_VC2005_OR_GREATER
 	/* Embedding manifest */
 	if (ret == 0) {
 		sprintf (cobc_buffer,
@@ -3647,7 +3647,7 @@ process_module (struct filename *fn)
 		cobc_cc, name, fn->object,
 		manilink, cobc_ldflags, cobc_libs, cobc_lib_paths);
 	ret = process (cobc_buffer, fn);
-#if	_MSC_VER >= 1400
+#if	COB_USE_VC2005_OR_GREATER
 	/* Embedding manifest */
 	if (ret == 0) {
 		sprintf (cobc_buffer,
@@ -3739,7 +3739,7 @@ process_library (struct filename *l)
 		cobc_cc, name, cobc_objects_buffer,
 		manilink, cobc_ldflags, cobc_libs, cobc_lib_paths);
 	ret = process (cobc_buffer, l);
-#if	_MSC_VER >= 1400
+#if	COB_USE_VC2005_OR_GREATER
 	/* Embedding manifest */
 	if (ret == 0) {
 		sprintf (cobc_buffer,
@@ -3829,7 +3829,7 @@ process_link (struct filename *l)
 		cobc_cc, name, cobc_objects_buffer,
 		manilink, cobc_ldflags, cobc_libs, cobc_lib_paths);
 	ret = process (cobc_buffer, l);
-#if	_MSC_VER >= 1400
+#if	COB_USE_VC2005_OR_GREATER
 	/* Embedding manifest */
 	if (ret == 0) {
 		sprintf (cobc_buffer,
@@ -4194,7 +4194,7 @@ main (int argc, char **argv)
 	if (!verbose_output) {
 		COBC_ADD_STR (cobc_cflags, " /nologo", NULL, NULL);
 	}
-#if	_MSC_VER >= 1400
+#if	COB_USE_VC2005_OR_GREATER
 	if (!verbose_output) {
 		manicmd = "mt /nologo";
 		manilink = "/link /nologo /manifest";
