@@ -1,4 +1,9 @@
 
+2015-04-02  Edward Hart <edward.dan.hart@gmail.com>
+
+	* common.h: added new macros COB_USE_VC(2005/2008/2013)_OR_GREATER to
+	  replace _MSC_VER checks
+
 2015-03-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* common.h: Changed COB_FILE_MODE to 0666
